# elaris

./: Cargo.toml  LICENSE.md  README.md
src/: bus.rs  cartridge.rs  controller.rs  lib.rs  main.rs
src/apu/: apu.rs  mod.rs
src/cartridge/: cartridge.rs  mod.rs
src/cartridge/mapper/: mapper.rs  mapper0.rs  mapper1.rs  mapper4.rs  mod.rs
src/cpu/: cpu.rs  flags.rs  mod.rs  tests.rs
src/ppu/: mod.rs  ppu.rs
